--- a/src/GIMI-ModManager.WinUI/Views/Controls/SelectCharacterFromGrid.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Controls/SelectCharacterFromGrid.xaml
@@ -42,7 +42,8 @@
                             <TextBlock
                                 HorizontalAlignment="Center"
                                 Style="{ThemeResource BodyStrongTextBlockStyle}"
-                                Text="{x:Bind DisplayName}" />
+                                Text="{x:Bind DisplayName}"
+                                TextWrapping="NoWrap" />
                         </StackPanel>
                     </Border>
                 </ItemContainer>
