--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -7,10 +7,12 @@
     xmlns:controls1="using:GIMI_ModManager.WinUI.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:entities="using:GIMI_ModManager.Core.Entities"
+    xmlns:genshin="using:GIMI_ModManager.Core.Entities.Genshin"
     xmlns:helpers="using:GIMI_ModManager.WinUI.Helpers"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:GIMI_ModManager.WinUI.Models"
+    xmlns:options="using:GIMI_ModManager.WinUI.Models.Options"
     x:Name="CharacterDetailsRoot"
     mc:Ignorable="d">
 
@@ -18,6 +20,17 @@
         <helpers:BoolInverterConverter x:Name="BoolInverter" />
         <helpers:ValueToBoolConverter x:Name="ValueToBoolConverter" />
         <helpers:StringToUri x:Name="StringToUri" />
+        <helpers:AttentionTypeToSymbolConverter x:Name="AttentionTypeToSymbolConverter" />
+        <Storyboard x:Name="PulsingIcon">
+            <DoubleAnimation
+                AutoReverse="True"
+                RepeatBehavior="Forever"
+                Storyboard.TargetName="NotificationIcon"
+                Storyboard.TargetProperty="Opacity"
+                From="1"
+                To="0.2"
+                Duration="0:0:2" />
+        </Storyboard>
     </Page.Resources>
 
     <Grid Margin="{StaticResource NegativeNavigationViewPageContentMargin}">
@@ -30,6 +43,7 @@
                 Placement="RightEdgeAlignedBottom">
                 <Grid>
                     <Grid.RowDefinitions>
+                        <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
@@ -50,9 +64,6 @@
                                 BorderThickness="0"
                                 Command="{x:Bind ViewModel.MoveModsFlyoutVM.DeleteModsCommand}">
                                 <FontIcon FontSize="16" Glyph="&#xE74D;" />
-                                <Button.KeyboardAccelerators>
-                                    <KeyboardAccelerator Key="Delete" />
-                                </Button.KeyboardAccelerators>
                             </Button>
                         </Grid>
                     </Grid>
@@ -77,7 +88,7 @@
                                 Text="{x:Bind ViewModel.MoveModsFlyoutVM.SearchText, Mode=TwoWay}"
                                 TextChanged="MoveModSearch_OnTextChanged">
                                 <AutoSuggestBox.ItemTemplate>
-                                    <DataTemplate x:DataType="entities:GenshinCharacter">
+                                    <DataTemplate x:DataType="genshin:GenshinCharacter">
                                         <TextBlock Text="{x:Bind DisplayName}" />
                                     </DataTemplate>
                                 </AutoSuggestBox.ItemTemplate>
@@ -85,7 +96,49 @@
                         </StackPanel>
 
                     </StackPanel>
+
+                    <StackPanel
+                        Grid.Row="2"
+                        Margin="0,4,0,4"
+                        Padding="0,4,0,0"
+                        BorderBrush="{ThemeResource ControlElevationBorderBrush}"
+                        BorderThickness="0,4,0,0">
+                        <Expander
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Top"
+                            ExpandDirection="Down"
+                            Header="Move Mods to another Skin"
+                            IsEnabled="{x:Bind ViewModel.MultipleInGameSkins, Mode=OneWay}"
+                            IsExpanded="False">
+                            <Expander.Content>
+                                <StackPanel>
+                                    <controls1:SelectCharacterFromGrid GridSource="{x:Bind ViewModel.MoveModsFlyoutVM.SelectableCharacterSkins, Mode=OneWay}" ItemClickedCommand="{x:Bind ViewModel.MoveModsFlyoutVM.SelectNewCharacterSkinCommand}" />
+
+                                    <StackPanel Margin="0,8,0,0" Orientation="Horizontal">
+                                        <Button HorizontalAlignment="Left" Command="{x:Bind ViewModel.MoveModsFlyoutVM.OverrideModCharacterSkinCommand}">
+                                            <Button.Content>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <FontIcon Margin="0,0,4,0" Glyph="&#xE74E;" />
+                                                    <TextBlock Text="Override" />
+                                                </StackPanel>
+                                            </Button.Content>
+                                        </Button>
+
+                                        <StackPanel Margin="4,0,0,0" Visibility="{x:Bind ViewModel.MoveModsFlyoutVM.SelectedModHasCharacterSkinOverride, Mode=OneWay}">
+                                            <TextBlock Text="Override Skin Set To: " />
+                                            <TextBlock HorizontalAlignment="Center" Text="{x:Bind ViewModel.MoveModsFlyoutVM.SelectedModCharacterSkinOverrideDisplayName, Mode=OneWay}" />
+                                        </StackPanel>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Expander.Content>
+                        </Expander>
+                    </StackPanel>
                 </Grid>
+            </Flyout>
+
+
+            <Flyout x:Name="SelectInGameSkin">
+                <controls1:SelectCharacterFromGrid GridSource="{x:Bind ViewModel.SelectableInGameSkins, Mode=OneWay}" ItemClickedCommand="{x:Bind ViewModel.SwitchCharacterSkinCommand}" />
             </Flyout>
 
             <MenuFlyout x:Name="ImageFlyout">
@@ -114,7 +167,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="10*" />
             </Grid.ColumnDefinitions>
 
 
@@ -125,7 +178,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <StackPanel>
+                <StackPanel MaxWidth="220">
 
                     <Button AutomationProperties.AcceleratorKey="Escape" Command="{x:Bind ViewModel.GoBackCommand}">
                         <Button.KeyboardAccelerators>
@@ -141,32 +194,61 @@
                         Margin="{StaticResource SmallRightMargin}"
                         Padding="{StaticResource XSmallLeftTopRightBottomMargin}"
                         HorizontalAlignment="Center"
-                        VerticalAlignment="Top">
+                        VerticalAlignment="Top"
+                        CornerRadius="10">
                         <Image
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            Source="{x:Bind ViewModel.ShownCharacter.ImageUri}" />
+                            Source="{x:Bind ViewModel.SelectedInGameSkin.ImageUri, Mode=OneWay}" />
                     </Grid>
                     <TextBlock
                         Padding="{StaticResource XSmallLeftTopRightBottomMargin}"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Top"
+                        FontFamily="{StaticResource GenshinFont}"
+                        FontSize="28"
                         RelativePanel.AlignLeftWithPanel="True"
                         RelativePanel.Below="itemHero"
-                        Style="{ThemeResource TitleTextBlockStyle}"
-                        Text="{x:Bind ViewModel.ShownCharacter.DisplayName}" />
+                        Text="{x:Bind ViewModel.ShownCharacter.DisplayName}"
+                        TextWrapping="WrapWholeWords" />
+                    <!--  Style="{ThemeResource TitleTextBlockStyle}"  -->
+
 
                     <StackPanel
-                        Margin="{StaticResource SmallRightMargin}"
+                        Margin="0,8"
                         HorizontalAlignment="Center"
                         Orientation="Horizontal">
                         <TextBlock
                             Margin="0,0,4,0"
                             VerticalAlignment="Center"
                             Style="{ThemeResource BodyTextStyle}"
-                            Text="Mods:" />
+                            Text="Tracked Mods:" />
                         <TextBlock Style="{ThemeResource BodyTextStyle}" Text="{x:Bind ViewModel.ModListVM.Mods.Count, Mode=OneWay}" />
                     </StackPanel>
+
+                    <StackPanel Padding="8" Background="{ThemeResource ControlFillColorDefaultBrush}">
+                        <TextBlock
+                            Padding="0,0,0,16"
+                            HorizontalAlignment="Center"
+                            Text="Selected Character Skin:" />
+                        <TextBlock
+                            HorizontalAlignment="Center"
+                            FontFamily="{StaticResource GenshinFont}"
+                            Text="{x:Bind ViewModel.SelectedInGameSkin.DisplayName, Mode=OneWay}"
+                            TextWrapping="WrapWholeWords" />
+                        <Button
+                            Margin="0,16,0,0"
+                            HorizontalAlignment="Center"
+                            Content="Select Skin"
+                            Flyout="{StaticResource SelectInGameSkin}"
+                            IsEnabled="{x:Bind ViewModel.MultipleInGameSkins, Mode=OneWay}">
+                            <Button.KeyboardAccelerators>
+                                <KeyboardAccelerator Key="F1" />
+                            </Button.KeyboardAccelerators>
+                        </Button>
+                    </StackPanel>
+
+
 
                 </StackPanel>
 
@@ -266,6 +348,7 @@
                                 CanUserResizeColumns="True"
                                 CellEditEnded="ModListGrid_OnCellEditEnded"
                                 ContextFlyout="{Binding ElementName=ModRowFlyout}"
+                                FrozenColumnCount="3"
                                 GridLinesVisibility="All"
                                 ItemsSource="{x:Bind ViewModel.ModListVM.Mods, Mode=OneWay}"
                                 KeyDown="ModListGrid_OnKeyDown"
@@ -288,6 +371,38 @@
                                                         IsChecked="{x:Bind IsEnabled, Mode=OneWay}"
                                                         IsTabStop="False" />
                                                 </Grid>
+                                            </DataTemplate>
+                                        </controls:DataGridTemplateColumn.CellTemplate>
+                                    </controls:DataGridTemplateColumn>
+
+
+                                    <controls:DataGridTemplateColumn
+                                        Width="SizeToCells"
+                                        CanUserSort="False"
+                                        Header=""
+                                        IsReadOnly="True"
+                                        Tag="NotificationColumn">
+                                        <controls:DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate x:DataType="models:NewModModel">
+
+                                                <StackPanel
+                                                    HorizontalAlignment="Center"
+                                                    VerticalAlignment="Center"
+                                                    Orientation="Horizontal">
+                                                    <ItemsRepeater ItemsSource="{x:Bind ModNotifications, Mode=OneWay}">
+                                                        <ItemsRepeater.ItemTemplate>
+                                                            <DataTemplate x:DataType="options:ModNotification">
+                                                                <Grid Margin="4,0" VerticalAlignment="Center">
+                                                                    <FontIcon
+                                                                        VerticalAlignment="Bottom"
+                                                                        Foreground="{ThemeResource AccentTextFillColorTertiaryBrush}"
+                                                                        Glyph="{x:Bind AttentionType, Converter={StaticResource AttentionTypeToSymbolConverter}}" />
+                                                                </Grid>
+                                                            </DataTemplate>
+                                                        </ItemsRepeater.ItemTemplate>
+                                                    </ItemsRepeater>
+                                                </StackPanel>
+
                                             </DataTemplate>
                                         </controls:DataGridTemplateColumn.CellTemplate>
                                     </controls:DataGridTemplateColumn>
@@ -317,7 +432,9 @@
                                         Header="Mod Folder Name"
                                         IsReadOnly="True"
                                         Tag="Folder Name" />
+
                                 </controls:DataGrid.Columns>
+
                             </controls:DataGrid>
                         </Grid>
 
@@ -383,7 +500,10 @@
                                     Text="{x:Bind ViewModel.ModPaneVM.SelectedModModel.Name, Mode=TwoWay}"
                                     TextAlignment="Center" />
 
-                                <Button Grid.Column="1" Command="{x:Bind ViewModel.ModPaneVM.ToggleEditingModNameCommand}">
+                                <Button
+                                    Grid.Column="1"
+                                    Command="{x:Bind ViewModel.ModPaneVM.ToggleEditingModNameCommand}"
+                                    IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}">
                                     <FontIcon Glyph="&#xE70F;" />
                                 </Button>
 
