fixes issue and flyout is now closed when delete confirmation pupup is shown

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -40,7 +40,8 @@
                 Closed="MoveRowFlyout_OnClosed"
                 Opened="ModRowFlyout_OnOpened"
                 Opening="ModRowFlyout_OnOpening"
-                Placement="RightEdgeAlignedBottom">
+                Placement="RightEdgeAlignedBottom"
+                ShouldConstrainToRootBounds="False">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition />
